add java_ops